Fri Feb  4 11:17:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Profile.cpp (TAO_Profile):

	  Updated order of attributes in constructor base member
	  initializer lists to match new attribute declaration order.

Fri Feb  4 11:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/SystemException.cpp:
          Added several missing error texts.

        * tao/LocalObject.cpp:
          Changed _get_component, _get_interface, _get_policy,
          _set_policy_overrides, _get_policy_overrides, _validate_connection
          to throw a CORBA::NO_IMPLEMENT system exception with minor code 8
          as described by the latest corba spec.

Fri Feb  4 01:25:05 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/IIOP_Endpoint.h:
	* tao/Object.h:
	* tao/Profile.h:
	* tao/Profile_Transport_Resolver.h:
	* tao/params.h:

	  Optimized class/struct attribute declaration order to reduce
	  alignment padding, hence the overall size of the class/struct.

	* tao/IIOP_Endpoint.cpp:
	* tao/Object.cpp:
	* tao/Object.i:
	* tao/Profile.cpp:
	* tao/Profile_Transport_Resolver.inl:
	* tao/params.cpp:

	  Updated order of attributes in constructor base member
	  initializer lists accordingly.

Thu Feb  3 19:27:58 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Messaging/Asynch_Reply_Dispatcher.cpp (reply_timed_out):

	  A slightly modified fix for [BUGID2038]. Once Torsten confirms
	  this works, I will close the bugzilla entry.

Thu Feb  3 19:14:17 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:

	  Reverted this patch "Thu Jan 27 20:01:21 2005  Balachandran
	  Natarajan  <bala@dre.vanderbilt.edu>"

Wed Feb  2 22:17:49 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_cs.cpp:
        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:

          Changed C-style casts in generated code for arrays