@@ -1,3 +1,15 @@
+Fri Feb  4 15:09:22 2005  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
+        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Endpoint.cpp:
+        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Endpoint.h:
+        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Endpoint.i:
+
+          In an effort to resolve multithreaded issues in the SSLIOP
+          connector, the assignment of security attributes to the endpoint
+          are now guarded by the same lock used to guard access to these
+          parameters.
+
 Fri Feb  4 11:17:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/Profile.cpp (TAO_Profile):
